# voiceforge-assistant

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  render.yaml
.cursor/skills/principal-ux-architect/: SKILL.md
.github/workflows/: deploy.yml  security-scan.yml
api/: main.py
docs/: DEPLOYMENT.md  SLO.md
docs/adr/: ADR-001-voice-pipeline.md
docs/diagrams/: canonical-architecture.mmd
scripts/: security_risk_report.py
tests/: test_api.py  test_pipeline.py
ui/: .env.production  next.config.mjs  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: AppShell.tsx  ArchitectOverview.tsx  ArchitectRail.tsx  GlassboxWorkbench.tsx  ProductWorkbench.tsx  VoicePipelineGlassbox.tsx
voiceforge/: __init__.py  asr.py  cli.py  config.py  degradation.py  latency.py  llm.py  pipeline.py  tts.py
